# prediction-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  PREDICTION_IMPROVEMENTS.md  PREDICTION_TRACKING.md  README.md  README_OPS.md  check_deliveries.py  check_stats.py  check_status.py  check_validation.py  clear_locks.py  daily_research_cycle.bat  diagnose_predictions.py  docker-compose.yml  inspect_alert_rules.py  kill_normalization.py  pyproject.toml  reclassify_and_seed_etf_targets.py  reset_all_quarantined.py  reset_quarantined.py  reset_small_batch.py  run_eia_once.py  run_fear_greed_once.py  run_full_pipeline.py  run_ingestion.py  run_normalization_clean.py  seed_targets.py  set_threshold_0_65.py  smoke_client.py  smoke_macro_block.py  smoke_ollama.py  test_conn.py
app/: cli.py  config.py  logging.py
app/db/: pool.py  (+1 more)
diagrams/: prediction_app_data_flow.drawio  prediction_app_er_diagram.drawio
docs/: admin_ui.md  agent_skills.md  ai_safety_and_loops.md  context_and_cost_management.md  design_prediction_markets.md  input_validation_and_security.md  io_specification.md  local_docker_setup.md  logging_strategy.md  model_configuration.md  prediction_app_acceptance_criteria.md  project_checklist.md  research_data_sources.md  unit_test_plan.md
sql/: 001_init_experimental_prediction_app.sql  002_pending_migrations.sql
tests/: test_alert_pipeline.py  test_alert_rules.py  test_alert_service.py  test_calibration.py  test_cli.py  test_connector_base.py  test_connector_cboe_options.py  test_connector_cftc_cot.py  test_connector_eia.py  test_connector_fear_greed.py  (+19 more)
(+57 files in other folders)
